--- a/Lab10_7seg/Lab10_7seg.runs/impl_1/usage_statistics_webtalk.html
+++ b/Lab10_7seg/Lab10_7seg.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2405991</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon Apr 13 16:48:40 2020</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon Apr 13 17:11:13 2020</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2018.3 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>7c56a3de69a143359878030100808d02</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>2</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>3</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>27d4c96612d3562b9b9909f34f6a1194</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>27d4c96612d3562b9b9909f34f6a1194</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -36,17 +36,17 @@
    <TD>addsrcwizard_specify_or_create_constraint_files=3</TD>
    <TD>addsrcwizard_specify_simulation_specific_hdl_files=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>basedialog_cancel=2</TD>
-   <TD>basedialog_ok=71</TD>
-   <TD>basedialog_yes=27</TD>
+   <TD>basedialog_ok=73</TD>
+   <TD>basedialog_yes=28</TD>
    <TD>boardchooser_board_table=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>cmdmsgdialog_ok=5</TD>
+</TR><TR ALIGN='LEFT'>   <TD>cmdmsgdialog_ok=6</TD>
    <TD>constraintschooserpanel_add_files=6</TD>
    <TD>constraintschooserpanel_copy_constraints_files_into_project=1</TD>
    <TD>constraintschooserpanel_file_table=3</TD>
 </TR><TR ALIGN='LEFT'>   <TD>createsrcfiledialog_file_name=6</TD>
    <TD>createsrcfiledialog_file_type=6</TD>
-   <TD>filesetpanel_file_set_panel_tree=315</TD>
-   <TD>flownavigatortreepanel_flow_navigator_tree=87</TD>
+   <TD>filesetpanel_file_set_panel_tree=324</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=93</TD>
 </TR><TR ALIGN='LEFT'>   <TD>gettingstartedview_create_new_project=1</TD>
    <TD>graphicalview_zoom_fit=38</TD>
    <TD>graphicalview_zoom_in=32</TD>
@@ -69,14 +69,14 @@
    <TD>pacommandnames_simulation_run_behavioral=30</TD>
 </TR><TR ALIGN='LEFT'>   <TD>pacommandnames_src_disable=1</TD>
    <TD>pacommandnames_src_enable=1</TD>
-   <TD>paviews_code=44</TD>
+   <TD>paviews_code=45</TD>
    <TD>paviews_device=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>paviews_project_summary=10</TD>
-   <TD>programdebugtab_program_device=1</TD>
-   <TD>programfpgadialog_program=1</TD>
+   <TD>programdebugtab_program_device=4</TD>
+   <TD>programfpgadialog_program=4</TD>
    <TD>projectnamechooser_project_name=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>rdicommands_delete=9</TD>
-   <TD>rdicommands_save_file=78</TD>
+   <TD>rdicommands_save_file=82</TD>
    <TD>rdicommands_undo=7</TD>
    <TD>rdiviews_waveform_viewer=67</TD>
 </TR><TR ALIGN='LEFT'>   <TD>removesourcesdialog_also_delete=1</TD>
@@ -101,21 +101,22 @@
 <TR ALIGN='LEFT'>   <TD>addsources=21</TD>
    <TD>autoconnecttarget=1</TD>
    <TD>editdelete=9</TD>
-   <TD>launchprogramfpga=1</TD>
+   <TD>launchprogramfpga=4</TD>
 </TR><TR ALIGN='LEFT'>   <TD>makeactivesimset=6</TD>
    <TD>newproject=1</TD>
    <TD>openhardwaremanager=1</TD>
    <TD>openrecenttarget=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>runbitgen=27</TD>
+</TR><TR ALIGN='LEFT'>   <TD>programdevice=1</TD>
+   <TD>runbitgen=28</TD>
    <TD>setsourceenabled=2</TD>
-   <TD>showview=22</TD>
-   <TD>simulationbreak=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>simulationrun=29</TD>
+   <TD>showview=23</TD>
+</TR><TR ALIGN='LEFT'>   <TD>simulationbreak=3</TD>
+   <TD>simulationrun=29</TD>
    <TD>simulationrunall=14</TD>
    <TD>toolssettings=1</TD>
-   <TD>viewtaskimplementation=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>viewtaskprogramanddebug=1</TD>
-   <TD>viewtaskprojectmanager=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>viewtaskimplementation=1</TD>
+   <TD>viewtaskprogramanddebug=1</TD>
+   <TD>viewtaskprojectmanager=5</TD>
    <TD>viewtasksimulation=1</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
@@ -677,10 +678,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:40s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:59s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=523.836MB</TD>
-    <TD>memory_peak=772.828MB</TD>
+    <TD>memory_gain=528.777MB</TD>
+    <TD>memory_peak=776.613MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
