--- a/Lab10_7seg/Lab10_7seg.runs/impl_1/usage_statistics_webtalk.html
+++ b/Lab10_7seg/Lab10_7seg.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2405991</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon Apr 13 17:11:13 2020</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon Apr 13 18:09:56 2020</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2018.3 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>7c56a3de69a143359878030100808d02</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>3</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>4</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>27d4c96612d3562b9b9909f34f6a1194</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>27d4c96612d3562b9b9909f34f6a1194</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -36,19 +36,19 @@
    <TD>addsrcwizard_specify_or_create_constraint_files=3</TD>
    <TD>addsrcwizard_specify_simulation_specific_hdl_files=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>basedialog_cancel=2</TD>
-   <TD>basedialog_ok=73</TD>
-   <TD>basedialog_yes=28</TD>
+   <TD>basedialog_ok=76</TD>
+   <TD>basedialog_yes=29</TD>
    <TD>boardchooser_board_table=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>cmdmsgdialog_ok=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>cmdmsgdialog_ok=7</TD>
    <TD>constraintschooserpanel_add_files=6</TD>
    <TD>constraintschooserpanel_copy_constraints_files_into_project=1</TD>
    <TD>constraintschooserpanel_file_table=3</TD>
 </TR><TR ALIGN='LEFT'>   <TD>createsrcfiledialog_file_name=6</TD>
    <TD>createsrcfiledialog_file_type=6</TD>
-   <TD>filesetpanel_file_set_panel_tree=324</TD>
-   <TD>flownavigatortreepanel_flow_navigator_tree=93</TD>
+   <TD>filesetpanel_file_set_panel_tree=341</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=97</TD>
 </TR><TR ALIGN='LEFT'>   <TD>gettingstartedview_create_new_project=1</TD>
-   <TD>graphicalview_zoom_fit=38</TD>
+   <TD>graphicalview_zoom_fit=41</TD>
    <TD>graphicalview_zoom_in=32</TD>
    <TD>graphicalview_zoom_out=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>hcodeeditor_blank_operations=1</TD>
@@ -63,37 +63,39 @@
    <TD>pacommandnames_auto_update_hier=15</TD>
    <TD>pacommandnames_make_active_simset=6</TD>
    <TD>pacommandnames_simulation_live_break=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_simulation_live_run_all=14</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_simulation_live_run_all=16</TD>
    <TD>pacommandnames_simulation_reset=6</TD>
-   <TD>pacommandnames_simulation_run=8</TD>
-   <TD>pacommandnames_simulation_run_behavioral=30</TD>
+   <TD>pacommandnames_simulation_run=9</TD>
+   <TD>pacommandnames_simulation_run_behavioral=33</TD>
 </TR><TR ALIGN='LEFT'>   <TD>pacommandnames_src_disable=1</TD>
    <TD>pacommandnames_src_enable=1</TD>
-   <TD>paviews_code=45</TD>
-   <TD>paviews_device=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>paviews_project_summary=10</TD>
-   <TD>programdebugtab_program_device=4</TD>
-   <TD>programfpgadialog_program=4</TD>
+   <TD>paviews_code=51</TD>
+   <TD>paviews_device=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>paviews_project_summary=11</TD>
+   <TD>programdebugtab_program_device=5</TD>
+   <TD>programfpgadialog_program=6</TD>
    <TD>projectnamechooser_project_name=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>rdicommands_delete=9</TD>
-   <TD>rdicommands_save_file=82</TD>
+</TR><TR ALIGN='LEFT'>   <TD>projecttab_close_design=1</TD>
+   <TD>rdicommands_delete=9</TD>
+   <TD>rdicommands_save_file=84</TD>
    <TD>rdicommands_undo=7</TD>
-   <TD>rdiviews_waveform_viewer=67</TD>
-</TR><TR ALIGN='LEFT'>   <TD>removesourcesdialog_also_delete=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>rdiviews_waveform_viewer=73</TD>
+   <TD>removesourcesdialog_also_delete=1</TD>
    <TD>saveprojectutils_dont_save=1</TD>
    <TD>saveprojectutils_save=1</TD>
-   <TD>srcchooserpanel_add_files_below_to_this_simulation_set=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=12</TD>
+</TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_add_files_below_to_this_simulation_set=1</TD>
+   <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=12</TD>
    <TD>srcchooserpanel_add_or_create_source_file=3</TD>
    <TD>srcchooserpanel_create_file=7</TD>
-   <TD>srcchoosertable_src_chooser_table=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>srcmenu_ip_hierarchy=13</TD>
+</TR><TR ALIGN='LEFT'>   <TD>srcchoosertable_src_chooser_table=3</TD>
+   <TD>srcmenu_ip_hierarchy=13</TD>
    <TD>srcmenu_refresh_hierarchy=1</TD>
    <TD>syntheticagettingstartedview_recent_projects=8</TD>
-   <TD>syntheticastatemonitor_cancel=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>tclconsoleview_tcl_console_code_editor=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>syntheticastatemonitor_cancel=1</TD>
+   <TD>taskbanner_close=1</TD>
+   <TD>tclconsoleview_tcl_console_code_editor=1</TD>
    <TD>waveformnametree_waveform_name_tree=2</TD>
-   <TD>waveformview_goto_last_time=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>waveformview_goto_last_time=1</TD>
    <TD>waveformview_goto_time_0=1</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
@@ -101,18 +103,18 @@
 <TR ALIGN='LEFT'>   <TD>addsources=21</TD>
    <TD>autoconnecttarget=1</TD>
    <TD>editdelete=9</TD>
-   <TD>launchprogramfpga=4</TD>
+   <TD>launchprogramfpga=6</TD>
 </TR><TR ALIGN='LEFT'>   <TD>makeactivesimset=6</TD>
    <TD>newproject=1</TD>
-   <TD>openhardwaremanager=1</TD>
+   <TD>openhardwaremanager=2</TD>
    <TD>openrecenttarget=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>programdevice=1</TD>
-   <TD>runbitgen=28</TD>
+</TR><TR ALIGN='LEFT'>   <TD>programdevice=2</TD>
+   <TD>runbitgen=29</TD>
    <TD>setsourceenabled=2</TD>
-   <TD>showview=23</TD>
+   <TD>showview=24</TD>
 </TR><TR ALIGN='LEFT'>   <TD>simulationbreak=3</TD>
-   <TD>simulationrun=29</TD>
-   <TD>simulationrunall=14</TD>
+   <TD>simulationrun=32</TD>
+   <TD>simulationrunall=16</TD>
    <TD>toolssettings=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>viewtaskimplementation=1</TD>
    <TD>viewtaskprogramanddebug=1</TD>
@@ -145,7 +147,7 @@
    <TD>launch_simulation_questa=0</TD>
    <TD>launch_simulation_riviera=0</TD>
    <TD>launch_simulation_vcs=0</TD>
-</TR><TR ALIGN='LEFT'>   <TD>launch_simulation_xsim=40</TD>
+</TR><TR ALIGN='LEFT'>   <TD>launch_simulation_xsim=42</TD>
    <TD>simulator_language=Mixed</TD>
    <TD>srcsetcount=12</TD>
    <TD>synthesisstrategy=Vivado Synthesis Defaults</TD>
@@ -166,12 +168,13 @@
     <TD>gnd=2</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ibuf=18</TD>
     <TD>lut1=3</TD>
-    <TD>lut2=5</TD>
-    <TD>lut3=23</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut4=2</TD>
-    <TD>lut6=27</TD>
+    <TD>lut2=7</TD>
+    <TD>lut3=19</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut4=1</TD>
+    <TD>lut5=8</TD>
+    <TD>lut6=18</TD>
     <TD>obuf=28</TD>
-    <TD>vcc=3</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcc=3</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -183,12 +186,13 @@
     <TD>gnd=2</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ibuf=18</TD>
     <TD>lut1=3</TD>
-    <TD>lut2=5</TD>
-    <TD>lut3=23</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut4=2</TD>
-    <TD>lut6=27</TD>
+    <TD>lut2=7</TD>
+    <TD>lut3=19</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut4=1</TD>
+    <TD>lut5=8</TD>
+    <TD>lut6=18</TD>
     <TD>obuf=28</TD>
-    <TD>vcc=3</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcc=3</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -277,7 +281,7 @@
     <TD>bidir_output_enable=1.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>board_layers=12to15 (12 to 15 Layers)</TD>
     <TD>board_selection=medium (10&quot;x10&quot;)</TD>
-    <TD>clocks=0.000598</TD>
+    <TD>clocks=0.000727</TD>
     <TD>confidence_level_clock_activity=High</TD>
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_design_state=High</TD>
     <TD>confidence_level_device_models=High</TD>
@@ -286,20 +290,20 @@
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_overall=Low</TD>
     <TD>customer=TBD</TD>
     <TD>customer_class=TBD</TD>
-    <TD>devstatic=0.071806</TD>
+    <TD>devstatic=0.071807</TD>
 </TR><TR ALIGN='LEFT'>    <TD>die=xc7a35tcpg236-1</TD>
     <TD>dsp_output_toggle=12.500000</TD>
-    <TD>dynamic=0.050088</TD>
+    <TD>dynamic=0.050563</TD>
     <TD>effective_thetaja=5.0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>enable_probability=0.990000</TD>
     <TD>family=artix7</TD>
     <TD>ff_toggle=12.500000</TD>
     <TD>flow_state=routed</TD>
 </TR><TR ALIGN='LEFT'>    <TD>heatsink=medium (Medium Profile)</TD>
-    <TD>i/o=0.047658</TD>
+    <TD>i/o=0.047829</TD>
     <TD>input_toggle=12.500000</TD>
     <TD>junction_temp=25.6 (C)</TD>
-</TR><TR ALIGN='LEFT'>    <TD>logic=0.000493</TD>
+</TR><TR ALIGN='LEFT'>    <TD>logic=0.000511</TD>
     <TD>mgtavcc_dynamic_current=0.000000</TD>
     <TD>mgtavcc_static_current=0.000000</TD>
     <TD>mgtavcc_total_current=0.000000</TD>
@@ -310,7 +314,7 @@
 </TR><TR ALIGN='LEFT'>    <TD>mgtavtt_voltage=1.200000</TD>
     <TD>netlist_net_matched=NA</TD>
     <TD>off-chip_power=0.000000</TD>
-    <TD>on-chip_power=0.121894</TD>
+    <TD>on-chip_power=0.122370</TD>
 </TR><TR ALIGN='LEFT'>    <TD>output_enable=1.000000</TD>
     <TD>output_load=5.000000</TD>
     <TD>output_toggle=12.500000</TD>
@@ -324,7 +328,7 @@
     <TD>read_saif=False</TD>
     <TD>set/reset_probability=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>signal_rate=False</TD>
-    <TD>signals=0.001339</TD>
+    <TD>signals=0.001496</TD>
     <TD>simulation_file=None</TD>
     <TD>speedgrade=-1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>static_prob=False</TD>
@@ -341,21 +345,21 @@
     <TD>vccadc_static_current=0.020000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccadc_total_current=0.020000</TD>
     <TD>vccadc_voltage=1.800000</TD>
-    <TD>vccaux_dynamic_current=0.001742</TD>
+    <TD>vccaux_dynamic_current=0.001748</TD>
     <TD>vccaux_io_dynamic_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccaux_io_static_current=0.000000</TD>
     <TD>vccaux_io_total_current=0.000000</TD>
     <TD>vccaux_io_voltage=1.800000</TD>
     <TD>vccaux_static_current=0.012621</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccaux_total_current=0.014363</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccaux_total_current=0.014370</TD>
     <TD>vccaux_voltage=1.800000</TD>
     <TD>vccbram_dynamic_current=0.000000</TD>
     <TD>vccbram_static_current=0.000163</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccbram_total_current=0.000163</TD>
     <TD>vccbram_voltage=1.000000</TD>
-    <TD>vccint_dynamic_current=0.002550</TD>
-    <TD>vccint_static_current=0.009625</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.012175</TD>
+    <TD>vccint_dynamic_current=0.002855</TD>
+    <TD>vccint_static_current=0.009626</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.012481</TD>
     <TD>vccint_voltage=1.000000</TD>
     <TD>vcco12_dynamic_current=0.000000</TD>
     <TD>vcco12_static_current=0.000000</TD>
@@ -377,9 +381,9 @@
     <TD>vcco25_static_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcco25_total_current=0.000000</TD>
     <TD>vcco25_voltage=2.500000</TD>
-    <TD>vcco33_dynamic_current=0.013455</TD>
+    <TD>vcco33_dynamic_current=0.013503</TD>
     <TD>vcco33_static_current=0.001000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.014455</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.014503</TD>
     <TD>vcco33_voltage=3.300000</TD>
     <TD>version=2018.3</TD>
 </TR>   </TABLE>
@@ -502,14 +506,16 @@
 </TR><TR ALIGN='LEFT'>    <TD>lut1_functional_category=LUT</TD>
     <TD>lut1_used=2</TD>
     <TD>lut2_functional_category=LUT</TD>
-    <TD>lut2_used=5</TD>
+    <TD>lut2_used=7</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut3_functional_category=LUT</TD>
-    <TD>lut3_used=23</TD>
+    <TD>lut3_used=19</TD>
     <TD>lut4_functional_category=LUT</TD>
-    <TD>lut4_used=2</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut6_functional_category=LUT</TD>
-    <TD>lut6_used=27</TD>
-    <TD>obuf_functional_category=IO</TD>
+    <TD>lut4_used=1</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut5_functional_category=LUT</TD>
+    <TD>lut5_used=8</TD>
+    <TD>lut6_functional_category=LUT</TD>
+    <TD>lut6_used=18</TD>
+</TR><TR ALIGN='LEFT'>    <TD>obuf_functional_category=IO</TD>
     <TD>obuf_used=28</TD>
 </TR>   </TABLE>
    </TD></TR>
@@ -526,8 +532,8 @@
     <TD>f8_muxes_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=48</TD>
-    <TD>lut_as_logic_util_percentage=0.23</TD>
+    <TD>lut_as_logic_used=43</TD>
+    <TD>lut_as_logic_util_percentage=0.21</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_used=0</TD>
@@ -542,8 +548,8 @@
     <TD>register_as_latch_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=20800</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=48</TD>
-    <TD>slice_luts_util_percentage=0.23</TD>
+    <TD>slice_luts_used=43</TD>
+    <TD>slice_luts_util_percentage=0.21</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=41600</TD>
     <TD>slice_registers_fixed=0</TD>
     <TD>slice_registers_used=44</TD>
@@ -552,8 +558,8 @@
     <TD>lut_as_distributed_ram_used=0</TD>
     <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=48</TD>
-    <TD>lut_as_logic_util_percentage=0.23</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=43</TD>
+    <TD>lut_as_logic_util_percentage=0.21</TD>
     <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_used=0</TD>
@@ -561,35 +567,35 @@
     <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_in_front_of_the_register_is_unused_fixed=0</TD>
-    <TD>lut_in_front_of_the_register_is_unused_used=14</TD>
-    <TD>lut_in_front_of_the_register_is_used_fixed=14</TD>
-    <TD>lut_in_front_of_the_register_is_used_used=9</TD>
-</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=9</TD>
-    <TD>register_driven_from_outside_the_slice_used=23</TD>
-    <TD>register_driven_from_within_the_slice_fixed=23</TD>
-    <TD>register_driven_from_within_the_slice_used=21</TD>
+    <TD>lut_in_front_of_the_register_is_unused_used=8</TD>
+    <TD>lut_in_front_of_the_register_is_used_fixed=8</TD>
+    <TD>lut_in_front_of_the_register_is_used_used=13</TD>
+</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=13</TD>
+    <TD>register_driven_from_outside_the_slice_used=21</TD>
+    <TD>register_driven_from_within_the_slice_fixed=21</TD>
+    <TD>register_driven_from_within_the_slice_used=23</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_available=8150</TD>
     <TD>slice_fixed=0</TD>
     <TD>slice_registers_available=41600</TD>
     <TD>slice_registers_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=44</TD>
     <TD>slice_registers_util_percentage=0.11</TD>
-    <TD>slice_used=25</TD>
-    <TD>slice_util_percentage=0.31</TD>
+    <TD>slice_used=23</TD>
+    <TD>slice_util_percentage=0.28</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=20</TD>
+    <TD>slicel_used=17</TD>
     <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=5</TD>
+    <TD>slicem_used=6</TD>
 </TR><TR ALIGN='LEFT'>    <TD>unique_control_sets_available=8150</TD>
     <TD>unique_control_sets_fixed=8150</TD>
     <TD>unique_control_sets_used=4</TD>
     <TD>unique_control_sets_util_percentage=0.05</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=0.05</TD>
-    <TD>using_o5_and_o6_used=11</TD>
-    <TD>using_o5_output_only_fixed=11</TD>
+    <TD>using_o5_and_o6_used=12</TD>
+    <TD>using_o5_output_only_fixed=12</TD>
     <TD>using_o5_output_only_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_fixed=0</TD>
-    <TD>using_o6_output_only_used=37</TD>
+    <TD>using_o6_output_only_used=31</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -678,10 +684,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:59s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:39s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=528.777MB</TD>
-    <TD>memory_peak=776.613MB</TD>
+    <TD>memory_gain=514.102MB</TD>
+    <TD>memory_peak=762.258MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
