--- a/Lab11_guess/Lab11_guess.runs/impl_1/usage_statistics_webtalk.html
+++ b/Lab11_guess/Lab11_guess.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2405991</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Apr 22 17:06:31 2020</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Apr 22 17:22:29 2020</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2018.3 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>75e8831915cb4135874b7c61b14a58c8</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>5</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>8</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>27d4c96612d3562b9b9909f34f6a1194</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>27d4c96612d3562b9b9909f34f6a1194</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -35,8 +35,8 @@
    <TD>addsrcwizard_specify_or_create_constraint_files=1</TD>
    <TD>addsrcwizard_specify_simulation_specific_hdl_files=4</TD>
    <TD>basedialog_cancel=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>basedialog_ok=43</TD>
-   <TD>basedialog_yes=13</TD>
+</TR><TR ALIGN='LEFT'>   <TD>basedialog_ok=49</TD>
+   <TD>basedialog_yes=16</TD>
    <TD>boardchooser_board_table=2</TD>
    <TD>cmdmsgdialog_ok=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>commandsinput_type_tcl_command_here=1</TD>
@@ -44,7 +44,7 @@
    <TD>createsrcfiledialog_file_name=8</TD>
    <TD>createsrcfiledialog_file_type=9</TD>
 </TR><TR ALIGN='LEFT'>   <TD>filesetpanel_file_set_panel_tree=76</TD>
-   <TD>flownavigatortreepanel_flow_navigator_tree=58</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=61</TD>
    <TD>gettingstartedview_create_new_project=1</TD>
    <TD>graphicalview_zoom_fit=38</TD>
 </TR><TR ALIGN='LEFT'>   <TD>graphicalview_zoom_in=22</TD>
@@ -63,13 +63,13 @@
    <TD>pacommandnames_simulation_run_behavioral=32</TD>
    <TD>paviews_code=8</TD>
    <TD>paviews_project_summary=17</TD>
-</TR><TR ALIGN='LEFT'>   <TD>programdebugtab_program_device=14</TD>
-   <TD>programdebugtab_refresh_device=2</TD>
-   <TD>programfpgadialog_program=14</TD>
+</TR><TR ALIGN='LEFT'>   <TD>programdebugtab_program_device=20</TD>
+   <TD>programdebugtab_refresh_device=4</TD>
+   <TD>programfpgadialog_program=20</TD>
    <TD>projectnamechooser_project_name=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>rdicommands_delete=4</TD>
    <TD>rdicommands_redo=1</TD>
-   <TD>rdicommands_save_file=120</TD>
+   <TD>rdicommands_save_file=125</TD>
    <TD>rdicommands_undo=68</TD>
 </TR><TR ALIGN='LEFT'>   <TD>rdicommands_waveform_save_configuration=1</TD>
    <TD>rdiviews_waveform_viewer=58</TD>
@@ -93,15 +93,15 @@
    <TD>autoconnecttarget=1</TD>
    <TD>editdelete=4</TD>
    <TD>fliptoviewtaskimplementation=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>launchprogramfpga=14</TD>
+</TR><TR ALIGN='LEFT'>   <TD>launchprogramfpga=20</TD>
    <TD>makeactivesimset=2</TD>
    <TD>newproject=1</TD>
    <TD>openhardwaremanager=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>openrecenttarget=4</TD>
-   <TD>refreshdevice=2</TD>
-   <TD>runbitgen=14</TD>
+   <TD>refreshdevice=4</TD>
+   <TD>runbitgen=17</TD>
    <TD>settopnode=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>showview=10</TD>
+</TR><TR ALIGN='LEFT'>   <TD>showview=13</TD>
    <TD>simulationbreak=4</TD>
    <TD>simulationrun=28</TD>
    <TD>simulationrunall=4</TD>
@@ -151,17 +151,31 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>post_unisim_transformation</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>gnd=1</TD>
-    <TD>obuf=28</TD>
-    <TD>vcc=1</TD>
+<TR ALIGN='LEFT'>    <TD>bufg=1</TD>
+    <TD>fdce=2</TD>
+    <TD>fdre=1</TD>
+    <TD>gnd=2</TD>
+</TR><TR ALIGN='LEFT'>    <TD>ibuf=3</TD>
+    <TD>lut1=2</TD>
+    <TD>lut2=5</TD>
+    <TD>lut3=1</TD>
+</TR><TR ALIGN='LEFT'>    <TD>obuf=28</TD>
+    <TD>vcc=3</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>pre_unisim_transformation</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>gnd=1</TD>
-    <TD>obuf=28</TD>
-    <TD>vcc=1</TD>
+<TR ALIGN='LEFT'>    <TD>bufg=1</TD>
+    <TD>fdce=2</TD>
+    <TD>fdre=1</TD>
+    <TD>gnd=2</TD>
+</TR><TR ALIGN='LEFT'>    <TD>ibuf=3</TD>
+    <TD>lut1=2</TD>
+    <TD>lut2=5</TD>
+    <TD>lut3=1</TD>
+</TR><TR ALIGN='LEFT'>    <TD>obuf=28</TD>
+    <TD>vcc=3</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -190,6 +204,8 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>results</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>cfgbvs-1=1</TD>
+    <TD>pdrc-153=1</TD>
+    <TD>plholdvio-2=1</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -208,6 +224,13 @@
     <TD>-return_string=default::[not_specified]</TD>
 </TR><TR ALIGN='LEFT'>    <TD>-slack_lesser_than=default::[not_specified]</TD>
     <TD>-waived=default::[not_specified]</TD>
+</TR>   </TABLE>
+   </TD></TR>
+   <TR><TD>
+   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>results</B></TD></TR>
+<TR ALIGN='LEFT'>    <TD>timing-14=1</TD>
+    <TD>timing-18=8</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -241,29 +264,29 @@
     <TD>bidir_output_enable=1.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>board_layers=12to15 (12 to 15 Layers)</TD>
     <TD>board_selection=medium (10&quot;x10&quot;)</TD>
-    <TD>clocks=0.000000</TD>
+    <TD>clocks=0.000514</TD>
     <TD>confidence_level_clock_activity=High</TD>
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_design_state=High</TD>
     <TD>confidence_level_device_models=High</TD>
     <TD>confidence_level_internal_activity=High</TD>
-    <TD>confidence_level_io_activity=High</TD>
-</TR><TR ALIGN='LEFT'>    <TD>confidence_level_overall=High</TD>
+    <TD>confidence_level_io_activity=Medium</TD>
+</TR><TR ALIGN='LEFT'>    <TD>confidence_level_overall=Medium</TD>
     <TD>customer=TBD</TD>
     <TD>customer_class=TBD</TD>
-    <TD>devstatic=0.068401</TD>
+    <TD>devstatic=0.071727</TD>
 </TR><TR ALIGN='LEFT'>    <TD>die=xc7a35tcpg236-1</TD>
     <TD>dsp_output_toggle=12.500000</TD>
-    <TD>dynamic=0.000000</TD>
+    <TD>dynamic=0.012480</TD>
     <TD>effective_thetaja=5.0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>enable_probability=0.990000</TD>
     <TD>family=artix7</TD>
     <TD>ff_toggle=12.500000</TD>
     <TD>flow_state=routed</TD>
 </TR><TR ALIGN='LEFT'>    <TD>heatsink=medium (Medium Profile)</TD>
-    <TD>i/o=0.000000</TD>
+    <TD>i/o=0.011727</TD>
     <TD>input_toggle=12.500000</TD>
-    <TD>junction_temp=25.3 (C)</TD>
-</TR><TR ALIGN='LEFT'>    <TD>logic=0.000000</TD>
+    <TD>junction_temp=25.4 (C)</TD>
+</TR><TR ALIGN='LEFT'>    <TD>logic=0.000098</TD>
     <TD>mgtavcc_dynamic_current=0.000000</TD>
     <TD>mgtavcc_static_current=0.000000</TD>
     <TD>mgtavcc_total_current=0.000000</TD>
@@ -274,13 +297,13 @@
 </TR><TR ALIGN='LEFT'>    <TD>mgtavtt_voltage=1.200000</TD>
     <TD>netlist_net_matched=NA</TD>
     <TD>off-chip_power=0.000000</TD>
-    <TD>on-chip_power=0.068401</TD>
+    <TD>on-chip_power=0.084208</TD>
 </TR><TR ALIGN='LEFT'>    <TD>output_enable=1.000000</TD>
     <TD>output_load=5.000000</TD>
     <TD>output_toggle=12.500000</TD>
     <TD>package=cpg236</TD>
 </TR><TR ALIGN='LEFT'>    <TD>pct_clock_constrained=0.000000</TD>
-    <TD>pct_inputs_defined=0</TD>
+    <TD>pct_inputs_defined=33</TD>
     <TD>platform=nt64</TD>
     <TD>process=typical</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ram_enable=50.000000</TD>
@@ -288,62 +311,63 @@
     <TD>read_saif=False</TD>
     <TD>set/reset_probability=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>signal_rate=False</TD>
+    <TD>signals=0.000141</TD>
     <TD>simulation_file=None</TD>
     <TD>speedgrade=-1</TD>
-    <TD>static_prob=False</TD>
-</TR><TR ALIGN='LEFT'>    <TD>temp_grade=commercial</TD>
+</TR><TR ALIGN='LEFT'>    <TD>static_prob=False</TD>
+    <TD>temp_grade=commercial</TD>
     <TD>thetajb=7.5 (C/W)</TD>
     <TD>thetasa=4.6 (C/W)</TD>
-    <TD>toggle_rate=False</TD>
-</TR><TR ALIGN='LEFT'>    <TD>user_board_temp=25.0 (C)</TD>
+</TR><TR ALIGN='LEFT'>    <TD>toggle_rate=False</TD>
+    <TD>user_board_temp=25.0 (C)</TD>
     <TD>user_effective_thetaja=5.0</TD>
-    <TD>user_junc_temp=25.3 (C)</TD>
-    <TD>user_thetajb=7.5 (C/W)</TD>
-</TR><TR ALIGN='LEFT'>    <TD>user_thetasa=4.6 (C/W)</TD>
+    <TD>user_junc_temp=25.4 (C)</TD>
+</TR><TR ALIGN='LEFT'>    <TD>user_thetajb=7.5 (C/W)</TD>
+    <TD>user_thetasa=4.6 (C/W)</TD>
     <TD>vccadc_dynamic_current=0.000000</TD>
     <TD>vccadc_static_current=0.020000</TD>
-    <TD>vccadc_total_current=0.020000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccadc_voltage=1.800000</TD>
-    <TD>vccaux_dynamic_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccadc_total_current=0.020000</TD>
+    <TD>vccadc_voltage=1.800000</TD>
+    <TD>vccaux_dynamic_current=0.000427</TD>
     <TD>vccaux_io_dynamic_current=0.000000</TD>
-    <TD>vccaux_io_static_current=0.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccaux_io_total_current=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccaux_io_static_current=0.000000</TD>
+    <TD>vccaux_io_total_current=0.000000</TD>
     <TD>vccaux_io_voltage=1.800000</TD>
-    <TD>vccaux_static_current=0.012615</TD>
-    <TD>vccaux_total_current=0.012615</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccaux_voltage=1.800000</TD>
+    <TD>vccaux_static_current=0.012616</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccaux_total_current=0.013044</TD>
+    <TD>vccaux_voltage=1.800000</TD>
     <TD>vccbram_dynamic_current=0.000000</TD>
-    <TD>vccbram_static_current=0.000161</TD>
-    <TD>vccbram_total_current=0.000161</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccbram_voltage=1.000000</TD>
-    <TD>vccint_dynamic_current=0.000000</TD>
-    <TD>vccint_static_current=0.009533</TD>
-    <TD>vccint_total_current=0.009533</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccint_voltage=1.000000</TD>
+    <TD>vccbram_static_current=0.000162</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccbram_total_current=0.000162</TD>
+    <TD>vccbram_voltage=1.000000</TD>
+    <TD>vccint_dynamic_current=0.000821</TD>
+    <TD>vccint_static_current=0.009556</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.010377</TD>
+    <TD>vccint_voltage=1.000000</TD>
     <TD>vcco12_dynamic_current=0.000000</TD>
     <TD>vcco12_static_current=0.000000</TD>
-    <TD>vcco12_total_current=0.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco12_voltage=1.200000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco12_total_current=0.000000</TD>
+    <TD>vcco12_voltage=1.200000</TD>
     <TD>vcco135_dynamic_current=0.000000</TD>
     <TD>vcco135_static_current=0.000000</TD>
-    <TD>vcco135_total_current=0.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco135_voltage=1.350000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco135_total_current=0.000000</TD>
+    <TD>vcco135_voltage=1.350000</TD>
     <TD>vcco15_dynamic_current=0.000000</TD>
     <TD>vcco15_static_current=0.000000</TD>
-    <TD>vcco15_total_current=0.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco15_voltage=1.500000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco15_total_current=0.000000</TD>
+    <TD>vcco15_voltage=1.500000</TD>
     <TD>vcco18_dynamic_current=0.000000</TD>
     <TD>vcco18_static_current=0.000000</TD>
-    <TD>vcco18_total_current=0.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco18_voltage=1.800000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco18_total_current=0.000000</TD>
+    <TD>vcco18_voltage=1.800000</TD>
     <TD>vcco25_dynamic_current=0.000000</TD>
     <TD>vcco25_static_current=0.000000</TD>
-    <TD>vcco25_total_current=0.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco25_voltage=2.500000</TD>
-    <TD>vcco33_dynamic_current=0.000000</TD>
-    <TD>vcco33_static_current=0.000000</TD>
-    <TD>vcco33_total_current=0.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco33_voltage=3.300000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco25_total_current=0.000000</TD>
+    <TD>vcco25_voltage=2.500000</TD>
+    <TD>vcco33_dynamic_current=0.003300</TD>
+    <TD>vcco33_static_current=0.001000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.004300</TD>
+    <TD>vcco33_voltage=3.300000</TD>
     <TD>version=2018.3</TD>
 </TR>   </TABLE>
    </TD></TR>
@@ -355,8 +379,8 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>clocking</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufgctrl_available=32</TD>
     <TD>bufgctrl_fixed=0</TD>
-    <TD>bufgctrl_used=0</TD>
-    <TD>bufgctrl_util_percentage=0.00</TD>
+    <TD>bufgctrl_used=1</TD>
+    <TD>bufgctrl_util_percentage=3.13</TD>
 </TR><TR ALIGN='LEFT'>    <TD>bufhce_available=72</TD>
     <TD>bufhce_fixed=0</TD>
     <TD>bufhce_used=0</TD>
@@ -454,7 +478,21 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>primitives</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>obuf_functional_category=IO</TD>
+<TR ALIGN='LEFT'>    <TD>bufg_functional_category=Clock</TD>
+    <TD>bufg_used=1</TD>
+    <TD>fdce_functional_category=Flop &amp; Latch</TD>
+    <TD>fdce_used=2</TD>
+</TR><TR ALIGN='LEFT'>    <TD>fdre_functional_category=Flop &amp; Latch</TD>
+    <TD>fdre_used=1</TD>
+    <TD>ibuf_functional_category=IO</TD>
+    <TD>ibuf_used=3</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut1_functional_category=LUT</TD>
+    <TD>lut1_used=2</TD>
+    <TD>lut2_functional_category=LUT</TD>
+    <TD>lut2_used=5</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut3_functional_category=LUT</TD>
+    <TD>lut3_used=1</TD>
+    <TD>obuf_functional_category=IO</TD>
     <TD>obuf_used=28</TD>
 </TR>   </TABLE>
    </TD></TR>
@@ -471,34 +509,34 @@
     <TD>f8_muxes_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=0</TD>
-    <TD>lut_as_logic_util_percentage=0.00</TD>
+    <TD>lut_as_logic_used=5</TD>
+    <TD>lut_as_logic_util_percentage=0.02</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_used=0</TD>
     <TD>lut_as_memory_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_flip_flop_available=41600</TD>
     <TD>register_as_flip_flop_fixed=0</TD>
-    <TD>register_as_flip_flop_used=0</TD>
-    <TD>register_as_flip_flop_util_percentage=0.00</TD>
+    <TD>register_as_flip_flop_used=3</TD>
+    <TD>register_as_flip_flop_util_percentage=&lt;0.01</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_latch_available=41600</TD>
     <TD>register_as_latch_fixed=0</TD>
     <TD>register_as_latch_used=0</TD>
     <TD>register_as_latch_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=20800</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=0</TD>
-    <TD>slice_luts_util_percentage=0.00</TD>
+    <TD>slice_luts_used=5</TD>
+    <TD>slice_luts_util_percentage=0.02</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=41600</TD>
     <TD>slice_registers_fixed=0</TD>
-    <TD>slice_registers_used=0</TD>
-    <TD>slice_registers_util_percentage=0.00</TD>
+    <TD>slice_registers_used=3</TD>
+    <TD>slice_registers_util_percentage=&lt;0.01</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_distributed_ram_fixed=0</TD>
     <TD>lut_as_distributed_ram_used=0</TD>
     <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=0</TD>
-    <TD>lut_as_logic_util_percentage=0.00</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=5</TD>
+    <TD>lut_as_logic_util_percentage=0.02</TD>
     <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_used=0</TD>
@@ -508,23 +546,29 @@
 </TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=0</TD>
     <TD>register_driven_from_outside_the_slice_used=0</TD>
     <TD>register_driven_from_within_the_slice_fixed=0</TD>
-    <TD>register_driven_from_within_the_slice_used=0</TD>
+    <TD>register_driven_from_within_the_slice_used=3</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_available=8150</TD>
     <TD>slice_fixed=0</TD>
     <TD>slice_registers_available=41600</TD>
     <TD>slice_registers_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=0</TD>
-    <TD>slice_registers_util_percentage=0.00</TD>
-    <TD>slice_used=0</TD>
-    <TD>slice_util_percentage=0.00</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=3</TD>
+    <TD>slice_registers_util_percentage=&lt;0.01</TD>
+    <TD>slice_used=2</TD>
+    <TD>slice_util_percentage=0.02</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=0</TD>
+    <TD>slicel_used=1</TD>
     <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=0</TD>
+    <TD>slicem_used=1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>unique_control_sets_available=8150</TD>
     <TD>unique_control_sets_fixed=8150</TD>
-    <TD>unique_control_sets_used=0</TD>
-    <TD>unique_control_sets_util_percentage=0.00</TD>
+    <TD>unique_control_sets_used=2</TD>
+    <TD>unique_control_sets_util_percentage=0.02</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=0.02</TD>
+    <TD>using_o5_and_o6_used=3</TD>
+    <TD>using_o5_output_only_fixed=3</TD>
+    <TD>using_o5_output_only_used=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_fixed=0</TD>
+    <TD>using_o6_output_only_used=2</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -613,10 +657,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:24s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:37s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=503.660MB</TD>
-    <TD>memory_peak=751.727MB</TD>
+    <TD>memory_gain=501.590MB</TD>
+    <TD>memory_peak=749.285MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
